# inbrief-openai

./: .gitignore  openai_api.py  pyproject.toml
openai_api/: __init__.py  core.py  prompts.py  utils.py
src/: openai_api.py  prompts.py  utils.py
