[tool.poetry]
name = "openai_api"
version = "1.0.0"
description = ""
authors = ["Nikita Rydanov <wrongwayboyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
tenacity = "^8.2.2"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
